src/zenoh_ffi.h

// ============================================================================
// Forward declarations
// ============================================================================
typedef struct ZenohSession ZenohSession;
typedef struct ZenohPublisher ZenohPublisher;
typedef struct ZenohSubscriber ZenohSubscriber;
typedef struct ZenohQueryable ZenohQueryable;
typedef struct ZenohLivelinessToken ZenohLivelinessToken;
// ============================================================================
// Enums - Priority and Congestion Control
// ============================================================================

typedef enum {
  ZENOH_PRIORITY_REAL_TIME = 1,
  ZENOH_PRIORITY_INTERACTIVE_HIGH = 2,
  ZENOH_PRIORITY_INTERACTIVE_LOW = 3,
  ZENOH_PRIORITY_DATA_HIGH = 4,
  ZENOH_PRIORITY_DATA = 5,
  ZENOH_PRIORITY_DATA_LOW = 6,
  ZENOH_PRIORITY_BACKGROUND = 7
} ZenohPriority;
typedef enum {
  ZENOH_CONGESTION_CONTROL_BLOCK = 0,
  ZENOH_CONGESTION_CONTROL_DROP = 1,
  ZENOH_CONGESTION_CONTROL_DROP_FIRST = 2
} ZenohCongestionControl;
typedef enum {
  ZENOH_SAMPLE_KIND_PUT = 0,
  ZENOH_SAMPLE_KIND_DELETE = 1
} ZenohSampleKind;
// ============================================================================
// Encoding Types
// ============================================================================

typedef enum {
  ZENOH_ENCODING_EMPTY = 0,
  ZENOH_ENCODING_BYTES = 1,
  ZENOH_ENCODING_STRING = 2,
  ZENOH_ENCODING_JSON = 3,
  ZENOH_ENCODING_TEXT_PLAIN = 4,
  ZENOH_ENCODING_TEXT_JSON = 5,
  ZENOH_ENCODING_TEXT_HTML = 6,
  ZENOH_ENCODING_TEXT_XML = 7,
  ZENOH_ENCODING_TEXT_CSS = 8,
  ZENOH_ENCODING_TEXT_CSV = 9,
  ZENOH_ENCODING_TEXT_JAVASCRIPT = 10,
  ZENOH_ENCODING_IMAGE_PNG = 11,
  ZENOH_ENCODING_IMAGE_JPEG = 12,
  ZENOH_ENCODING_IMAGE_GIF = 13,
  ZENOH_ENCODING_IMAGE_BMP = 14,
  ZENOH_ENCODING_IMAGE_WEBP = 15,
  ZENOH_ENCODING_APPLICATION_OCTET_STREAM = 16,
  ZENOH_ENCODING_APPLICATION_JSON = 17,
  ZENOH_ENCODING_APPLICATION_XML = 18,
  ZENOH_ENCODING_APPLICATION_CBOR = 19,
  ZENOH_ENCODING_APPLICATION_YAML = 20,
  ZENOH_ENCODING_APPLICATION_PROTOBUF = 21,
  ZENOH_ENCODING_APPLICATION_CDR = 22,
  ZENOH_ENCODING_CUSTOM = 100
} ZenohEncodingId;
// ============================================================================
// Publisher Options
// ============================================================================

typedef struct {
  ZenohPriority priority;
  ZenohCongestionControl congestion_control;
  ZenohEncodingId encoding;
  const char *encoding_schema;  // Optional schema for encoding
  bool is_express;              // Express mode for low latency
} ZenohPublisherOptions;
// ============================================================================
// Put Options
// ============================================================================

typedef struct {
  ZenohPriority priority;
  ZenohCongestionControl congestion_control;
  ZenohEncodingId encoding;
  const char *encoding_schema;
  const uint8_t *attachment;
  size_t attachment_len;
  bool is_express;
} ZenohPutOptions;
// ============================================================================
// Query Options
// ============================================================================

typedef struct {
  uint64_t timeout_ms;  // Timeout in milliseconds (0 = default)
  ZenohPriority priority;
  ZenohCongestionControl congestion_control;
  const uint8_t *payload;
  size_t payload_len;
  ZenohEncodingId encoding;
  const uint8_t *attachment;
  size_t attachment_len;
} ZenohGetOptions;
// ============================================================================
// Callback Types
// ============================================================================

// Subscriber callback with extended info
typedef void (*ZenohSubscriberCallback)(const char *key, const uint8_t *value,
                                        size_t len, const char *kind,
                                        const char *attachment, void *context);
// Extended subscriber callback with full sample info
typedef void (*ZenohSubscriberCallbackEx)(
    const char *key, const uint8_t *value, size_t len, int sample_kind,
    int priority, int congestion_control, const char *encoding,
    const uint8_t *attachment, size_t attachment_len, uint64_t timestamp,
    void *context);
// Query callback with extended info
typedef void (*ZenohGetCallback)(const char *key, const uint8_t *value,
                                 size_t len, const char *kind, void *context);
// Query completion callback
typedef void (*ZenohGetCompleteCallback)(void *context);
typedef void (*ZenohQueryCallback)(const char *key, const char *selector,
                                   const uint8_t *value, size_t len,
                                   const char *kind, void *reply_context,
                                   void *user_context);
// Liveliness callback
typedef void (*ZenohLivelinessCallback)(const char *key, int is_alive,
                                        void *context);
// ============================================================================
// Scouting
// ============================================================================

FFI_PLUGIN_EXPORT void zenoh_scout(const char *what, const char *config,
                                   void (*callback)(const char *info));
FFI_PLUGIN_EXPORT void zenoh_get_options_default(ZenohGetOptions *options);
// Encoding helpers
FFI_PLUGIN_EXPORT const char *zenoh_encoding_to_string(ZenohEncodingId encoding);
FFI_PLUGIN_EXPORT ZenohEncodingId zenoh_encoding_from_string(const char *str);