lib/src/gen/zenoh_ffi_bindings_generated.dart


  late final _zenoh_get_options_defaultPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ZenohGetOptions>)>>(
      'zenoh_get_options_default');
  late final _zenoh_get_options_default = _zenoh_get_options_defaultPtr
      .asFunction<void Function(ffi.Pointer<ZenohGetOptions>)>();

  /// Encoding helpers
  ffi.Pointer<ffi.Char> zenoh_encoding_to_string(
    int encoding,
  ) {
    return _zenoh_encoding_to_string(
      encoding,
    );
  }

  late final _zenoh_encoding_to_stringPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<ffi.Char> Function(ffi.Int32)>>(
          'zenoh_encoding_to_string');
  late final _zenoh_encoding_to_string = _zenoh_encoding_to_stringPtr
      .asFunction<ffi.Pointer<ffi.Char> Function(int)>();

  int zenoh_encoding_from_string(
    ffi.Pointer<ffi.Char> str,
  ) {
    return _zenoh_encoding_from_string(
      str,
    );
  }

  late final _zenoh_encoding_from_stringPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<ffi.Char>)>>(
          'zenoh_encoding_from_string');
  late final _zenoh_encoding_from_string = _zenoh_encoding_from_stringPtr
      .asFunction<int Function(ffi.Pointer<ffi.Char>)>();
}

final class ZenohSession extends ffi.Opaque {}

final class ZenohPublisher extends ffi.Opaque {}

final class ZenohSubscriber extends ffi.Opaque {}

final class ZenohQueryable extends ffi.Opaque {}

final class ZenohLivelinessToken extends ffi.Opaque {}

/// ============================================================================
/// Enums - Priority and Congestion Control
/// ============================================================================
abstract class ZenohPriority {
  static const int ZENOH_PRIORITY_REAL_TIME = 1;
  static const int ZENOH_PRIORITY_INTERACTIVE_HIGH = 2;
  static const int ZENOH_PRIORITY_INTERACTIVE_LOW = 3;
  static const int ZENOH_PRIORITY_DATA_HIGH = 4;
  static const int ZENOH_PRIORITY_DATA = 5;
  static const int ZENOH_PRIORITY_DATA_LOW = 6;
  static const int ZENOH_PRIORITY_BACKGROUND = 7;
}

abstract class ZenohCongestionControl {
  static const int ZENOH_CONGESTION_CONTROL_BLOCK = 0;
  static const int ZENOH_CONGESTION_CONTROL_DROP = 1;
  static const int ZENOH_CONGESTION_CONTROL_DROP_FIRST = 2;
}

abstract class ZenohSampleKind {
  static const int ZENOH_SAMPLE_KIND_PUT = 0;
  static const int ZENOH_SAMPLE_KIND_DELETE = 1;
}

/// ============================================================================
/// Encoding Types
/// ============================================================================
abstract class ZenohEncodingId {
  static const int ZENOH_ENCODING_EMPTY = 0;
  static const int ZENOH_ENCODING_BYTES = 1;
  static const int ZENOH_ENCODING_STRING = 2;
  static const int ZENOH_ENCODING_JSON = 3;
  static const int ZENOH_ENCODING_TEXT_PLAIN = 4;
  static const int ZENOH_ENCODING_TEXT_JSON = 5;
  static const int ZENOH_ENCODING_TEXT_HTML = 6;
  static const int ZENOH_ENCODING_TEXT_XML = 7;
  static const int ZENOH_ENCODING_TEXT_CSS = 8;
  static const int ZENOH_ENCODING_TEXT_CSV = 9;
  static const int ZENOH_ENCODING_TEXT_JAVASCRIPT = 10;
  static const int ZENOH_ENCODING_IMAGE_PNG = 11;
  static const int ZENOH_ENCODING_IMAGE_JPEG = 12;
  static const int ZENOH_ENCODING_IMAGE_GIF = 13;
  static const int ZENOH_ENCODING_IMAGE_BMP = 14;
  static const int ZENOH_ENCODING_IMAGE_WEBP = 15;
  static const int ZENOH_ENCODING_APPLICATION_OCTET_STREAM = 16;
  static const int ZENOH_ENCODING_APPLICATION_JSON = 17;
  static const int ZENOH_ENCODING_APPLICATION_XML = 18;
  static const int ZENOH_ENCODING_APPLICATION_CBOR = 19;
  static const int ZENOH_ENCODING_APPLICATION_YAML = 20;
  static const int ZENOH_ENCODING_APPLICATION_PROTOBUF = 21;
  static const int ZENOH_ENCODING_APPLICATION_CDR = 22;
  static const int ZENOH_ENCODING_CUSTOM = 100;
}

/// ============================================================================
/// Publisher Options
/// ============================================================================
final class ZenohPublisherOptions extends ffi.Struct {
  @ffi.Int32()
  external int priority;

  @ffi.Int32()
  external int congestion_control;

  @ffi.Int32()
  external int encoding;

  /// Optional schema for encoding
  external ffi.Pointer<ffi.Char> encoding_schema;

  /// Express mode for low latency
  @ffi.Bool()
  external bool is_express;
}

/// ============================================================================
/// Put Options
/// ============================================================================
final class ZenohPutOptions extends ffi.Struct {
  @ffi.Int32()
  external int priority;

  @ffi.Int32()
  external int congestion_control;

  @ffi.Int32()
  external int encoding;

  external ffi.Pointer<ffi.Char> encoding_schema;

  external ffi.Pointer<ffi.Uint8> attachment;

  @ffi.Size()
  external int attachment_len;

  @ffi.Bool()
  external bool is_express;
}

/// ============================================================================
/// Query Options
/// ============================================================================
final class ZenohGetOptions extends ffi.Struct {
  /// Timeout in milliseconds (0 = default)
  @ffi.Uint64()
  external int timeout_ms;

  @ffi.Int32()
  external int priority;

  @ffi.Int32()
  external int congestion_control;

  external ffi.Pointer<ffi.Uint8> payload;

  @ffi.Size()
  external int payload_len;

  @ffi.Int32()
  external int encoding;

  external ffi.Pointer<ffi.Uint8> attachment;

  @ffi.Size()
  external int attachment_len;
}

/// Subscriber callback with extended info
typedef ZenohSubscriberCallback
    = ffi.Pointer<ffi.NativeFunction<ZenohSubscriberCallbackFunction>>;
typedef ZenohSubscriberCallbackFunction = ffi.Void Function(
    ffi.Pointer<ffi.Char> key,
    ffi.Pointer<ffi.Uint8> value,
    ffi.Size len,
    ffi.Pointer<ffi.Char> kind,
    ffi.Pointer<ffi.Char> attachment,
    ffi.Pointer<ffi.Void> context);
typedef DartZenohSubscriberCallbackFunction = void Function(
    ffi.Pointer<ffi.Char> key,
    ffi.Pointer<ffi.Uint8> value,
    int len,
    ffi.Pointer<ffi.Char> kind,
    ffi.Pointer<ffi.Char> attachment,
    ffi.Pointer<ffi.Void> context);

/// Extended subscriber callback with full sample info
typedef ZenohSubscriberCallbackEx
    = ffi.Pointer<ffi.NativeFunction<ZenohSubscriberCallbackExFunction>>;
typedef ZenohSubscriberCallbackExFunction = ffi.Void Function(
    ffi.Pointer<ffi.Char> key,
    ffi.Pointer<ffi.Uint8> value,
    ffi.Size len,
    ffi.Int sample_kind,
    ffi.Int priority,
    ffi.Int congestion_control,
    ffi.Pointer<ffi.Char> encoding,
    ffi.Pointer<ffi.Uint8> attachment,
    ffi.Size attachment_len,
    ffi.Uint64 timestamp,
    ffi.Pointer<ffi.Void> context);
typedef DartZenohSubscriberCallbackExFunction = void Function(
    ffi.Pointer<ffi.Char> key,
    ffi.Pointer<ffi.Uint8> value,
    int len,
    int sample_kind,
    int priority,
    int congestion_control,
    ffi.Pointer<ffi.Char> encoding,
    ffi.Pointer<ffi.Uint8> attachment,
    int attachment_len,
    int timestamp,
    ffi.Pointer<ffi.Void> context);
typedef ZenohQueryCallback
    = ffi.Pointer<ffi.NativeFunction<ZenohQueryCallbackFunction>>;
typedef ZenohQueryCallbackFunction = ffi.Void Function(
    ffi.Pointer<ffi.Char> key,
    ffi.Pointer<ffi.Char> selector,
    ffi.Pointer<ffi.Uint8> value,
    ffi.Size len,
    ffi.Pointer<ffi.Char> kind,
    ffi.Pointer<ffi.Void> reply_context,
    ffi.Pointer<ffi.Void> user_context);
typedef DartZenohQueryCallbackFunction = void Function(
    ffi.Pointer<ffi.Char> key,
    ffi.Pointer<ffi.Char> selector,
    ffi.Pointer<ffi.Uint8> value,
    int len,
    ffi.Pointer<ffi.Char> kind,
    ffi.Pointer<ffi.Void> reply_context,
    ffi.Pointer<ffi.Void> user_context);

/// Query callback with extended info
typedef ZenohGetCallback
    = ffi.Pointer<ffi.NativeFunction<ZenohGetCallbackFunction>>;
typedef ZenohGetCallbackFunction = ffi.Void Function(
    ffi.Pointer<ffi.Char> key,
    ffi.Pointer<ffi.Uint8> value,
    ffi.Size len,
    ffi.Pointer<ffi.Char> kind,
    ffi.Pointer<ffi.Void> context);
typedef DartZenohGetCallbackFunction = void Function(
    ffi.Pointer<ffi.Char> key,
    ffi.Pointer<ffi.Uint8> value,
    int len,
    ffi.Pointer<ffi.Char> kind,
    ffi.Pointer<ffi.Void> context);

/// Query completion callback
typedef ZenohGetCompleteCallback
    = ffi.Pointer<ffi.NativeFunction<ZenohGetCompleteCallbackFunction>>;
typedef ZenohGetCompleteCallbackFunction = ffi.Void Function(
    ffi.Pointer<ffi.Void> context);
typedef DartZenohGetCompleteCallbackFunction = void Function(
    ffi.Pointer<ffi.Void> context);

/// Liveliness callback
typedef ZenohLivelinessCallback
    = ffi.Pointer<ffi.NativeFunction<ZenohLivelinessCallbackFunction>>;
typedef ZenohLivelinessCallbackFunction = ffi.Void Function(
    ffi.Pointer<ffi.Char> key, ffi.Int is_alive, ffi.Pointer<ffi.Void> context);
typedef DartZenohLivelinessCallbackFunction = void Function(
    ffi.Pointer<ffi.Char> key, int is_alive, ffi.Pointer<ffi.Void> context);
